# github-status-cli

./: .gitignore  LICENSE  README.md  setup.cfg
github_status/: github_status.py
