[metadata]
name = github-status-cli
version = 1.0.0
author = Marcel Van Der Linde
description = A small command-line tool that shows the current GitHub service status.
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
keywords = github, status, git, cli
license = MIT
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
python_requires = >=2.6
packages = github_status

[options.entry_points]
console_scripts = 
    github-status = github_status.github_status:get_status
